# crazyflie_demos

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
crazyflie_demos/: crazyflie_NN_controller.py  crazyflie_teleop.py
utils/: cfusdlog.py  config.txt  plot_data.py
