<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crazyflie_demos</name>
  <version>0.0.1</version>
  <description>ROS2 nodes for testing Crazyflie using different controllers</description>
  <maintainer email="piratax007@protonmail.ch">Fausto</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>example_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>crazyflie_interfaces</depend>
  <depend>buildin_interfaces</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>crazyflie</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
